feat: other apis
